--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -12,6 +12,17 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true"/>
+
+    <ImageButton
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/pictureFugitivo"
+            android:layout_below="@id/etiquetaMensaje"
+            android:layout_centerHorizontal="true"
+            android:src="@android:drawable/ic_menu_gallery"/>
+
+
+
     <Button
             android:id="@+id/botonCapturar"
             android:layout_width="wrap_content"
@@ -21,7 +32,7 @@
             android:text="@string/boton_capturar"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
             android:layout_marginTop="20dp"
-            android:layout_below="@+id/etiquetaMensaje"
+            android:layout_below="@+id/pictureFugitivo"
             android:layout_centerHorizontal="true"
             android:onClick="capturarFugitivoPresionado"
             />
@@ -37,4 +48,27 @@
             android:layout_centerHorizontal="true"
             android:onClick="eliminarFugitivoPresionado"
             />
+
+    <Button
+            android:id="@+id/botonTomarFoto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/boton_foto"
+            android:layout_below="@+id/botonEliminar"
+            android:layout_centerHorizontal="true"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+            android:onClick="onFotoClick"/>
+
+    <Button
+            android:id="@+id/botonMapa"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="boton mapa"
+            android:layout_below="@+id/botonTomarFoto"
+            android:layout_centerHorizontal="true"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+            android:onClick="onMapClick"/>
+
+
+
 </RelativeLayout>
