--- a/app/src/main/res/layout/activity_detalle.xml
+++ b/app/src/main/res/layout/activity_detalle.xml
@@ -35,6 +35,7 @@
             android:layout_below="@+id/pictureFugitivo"
             android:layout_centerHorizontal="true"
             android:onClick="capturarFugitivoPresionado"
+            android:visibility="invisible"
             />
     <Button
             android:id="@+id/botonEliminar"
@@ -47,6 +48,7 @@
             android:layout_below="@+id/botonCapturar"
             android:layout_centerHorizontal="true"
             android:onClick="eliminarFugitivoPresionado"
+            android:visibility="invisible"
             />
 
     <Button
@@ -57,7 +59,9 @@
             android:layout_below="@+id/botonEliminar"
             android:layout_centerHorizontal="true"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-            android:onClick="onFotoClick"/>
+            android:onClick="onFotoClick"
+            android:visibility="invisible"
+            />
 
     <Button
             android:id="@+id/botonMapa"
@@ -67,7 +71,9 @@
             android:layout_below="@+id/botonTomarFoto"
             android:layout_centerHorizontal="true"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
-            android:onClick="onMapClick"/>
+            android:onClick="onMapClick"
+            android:visibility="invisible"
+            />
 
 
 
